<resources>
    <string name="app_name">Dice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="dice_value">1</string>
    <string name="roll">Roll</string>
    <string name="app_title">Dice Roller App</string>
    <string name="result_text">Roll the Dice Friend!</string>
</resources>